--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,9 +21,9 @@
 				"marp-team.marp-vscode", // for markdown slides,
 				"cschleiden.vscode-github-actions",
 				"redhat.vscode-yaml", // for the gihub action intellisense
-
 				"bungcip.better-toml",
-				"davidanson.vscode-markdownlint"
+				"davidanson.vscode-markdownlint",
+				"eamodio.gitlens"
 			]
 		}
 	},
