--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -19,8 +19,8 @@ jobs:
       run: echo "$GITHUB_CONTEXT"
     - name: Run a command
       run: |
-        $Question = "Who Opened PR {0} titled {1}?" -f ${{ github.event.pull_request.number }} , ${{ github.event.pull_request.title }} 
-        $Answer = "{3} Opened PR {0} titled {1}?" -f ${{ github.event.pull_request.number }} , ${{ github.event.pull_request.title }} , ${{ github.event.pull_request.user.login }} 
+        $Question = "Who Opened PR {0} titled {1}?" -f '${{ github.event.pull_request.number }}' , '${{ github.event.pull_request.title }}' 
+        $Answer = "{3} Opened PR {0} titled {1}?" -f '${{ github.event.pull_request.number }}' , '${{ github.event.pull_request.title }}' , '${{ github.event.pull_request.user.login }}' 
         
         Write-Host $Question 
         Write-Host $Answer
