--- a/SouthCoastSummit/config.yml
+++ b/SouthCoastSummit/config.yml
@@ -1,7 +1,7 @@
 baseURL: http://example.org/
 languageCode: en-us
-title: My New Hugo Site
+title: Jess & Rob's Super Site
 
 module:
   imports:
-    - path: gitlab.com/kaushalmodi/hugo-mwe-theme
+  - path: gitlab.com/kaushalmodi/hugo-mwe-theme
