--- a/SouthCoastSummit/config.yml
+++ b/SouthCoastSummit/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://happy-ocean-07fc83203.2.azurestaticapps.net/
 languageCode: en-gb
 title: Jess & Rob's Super Site
 
