--- a/.github/workflows/close.yaml
+++ b/.github/workflows/close.yaml
@@ -22,4 +22,4 @@ jobs:
       uses: thechetantalwar/teams-notify@v2
       with:
        teams_webhook_url: ${{ secrets.BeardTeams }}
-       message: "GitHub Action Build Number ${{ github.run_number }} Completed for Pull Request ${{ github.event.pull_request.title }} created by user ${{ github.event.pull_request.user.login }}  and the outcome is  ${{ needs.build.result }}."
+       message: "GitHub Pull Request ${{ github.event.pull_request.title }} created by user ${{ github.event.pull_request.user.login }} has now been closed."
